--- a/index.html
+++ b/index.html
@@ -23,59 +23,71 @@
   </head>
 
   <body>
+
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
+      <h1 class="display-5">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block" id="9am">
-        <div class="col-md-1 hour">9am</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
-      </div>
       <div class="row time-block" id="10am">
         <div class="col-md-1 hour">10am</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
+      <div class="row time-block" id="10am">
+        <div class="col-md-1 hour">10am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
+      </div>
+
       <div class="row time-block" id="11am">
         <div class="col-md-1 hour">11am</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
       <div class="row time-block" id="12pm">
         <div class="col-md-1 hour">12pm</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
       <div class="row time-block" id="1pm">
         <div class="col-md-1 hour">1pm</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
       <div class="row time-block" id="2pm">
         <div class="col-md-1 hour">2pm</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
       <div class="row time-block" id="3pm">
         <div class="col-md-1 hour">3pm</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
       <div class="row time-block" id="4pm">
         <div class="col-md-1 hour">4pm</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+
       <div class="row time-block" id="5pm">
-        <div class="col-md-1 hour">5pm</div>
-        <textarea class="col-md-9 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:50px;"></i></button>
+        <div class="col-md-1 hour" id="last-hour">5pm</div>
+        <textarea class="col-md-10 description" id="last-row"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="far fa-save" style="font-size:32px;"></i></button>
       </div>
+    
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
